--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Random dogs generator</title>
   </head>
   <body>
@@ -42,7 +42,7 @@
       </div>
       <div class="flex justify-center items-center">
         <button
-          class="px-2.5 mt-1 border border-black rounded-lg text-white bg-black lg:mt-1"
+          class="p-2 mt-2.5 border border-black rounded-lg text-white bg-black lg:mt-1 focus:text-black focus:bg-white"
           onclick="generateDogs()"
         >
           Generate
