--- a/index.html
+++ b/index.html
@@ -1,59 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css" />
-    <title>Random dogs generator</title>
-  </head>
-  <body>
-    <header
-      class="w-full h-[5vh] py-2 bg-black flex justify-center items-center"
-    >
-      <h1 class="text-xl text-center text-white">Random Dog's Generator</h1>
-    </header>
-    <main>
-      <p class="pt-1 text-center">Click the button to see mans's best friend</p>
-      <div
-        class="container w-fit h-[73vh] mx-auto overflow-y-scroll flex flex-col items-center gap-3 md:grid md:grid-cols-3 lg:h-[70vh] lg:my-2"
-      >
-        <img class="w-80 h-72" src="" alt="This is a random dog" />
-        <img class="w-80 h-72" src="" alt="This is a random dog" />
-        <img class="w-80 h-72" src="" alt="This is a random dog" />
-        <img class="w-80 h-72" src="" alt="This is a random dog" />
-        <img class="w-80 h-72" src="" alt="This is a random dog" />
-        <img class="w-80 h-72" src="" alt="This is a random dog" />
-        <img
-          class="w-80 h-72 hidden md:block"
-          src=""
-          alt="This is a random dog"
-        />
-        <img
-          class="w-80 h-72 hidden md:block"
-          src=""
-          alt="This is a random dog"
-        />
-        <img
-          class="w-80 h-72 hidden md:block"
-          src=""
-          alt="This is a random dog"
-        />
-      </div>
-      <div class="flex justify-center items-center">
-        <button
-          class="p-2 mt-2.5 border border-black rounded-lg text-white bg-black lg:mt-1 focus:text-black focus:bg-white"
-          onclick="generateDogs()"
-        >
-          Generate
-        </button>
-      </div>
-    </main>
-    <footer
-      class="w-full h-[5vh] mt-2 p-2 bg-black fixed bottom-0 right-0 left-0 flex justify-center items-center"
-    >
-      <p class="text-xl text-center text-white">&copy;Johan.co</p>
-    </footer>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id="result"></div>
     <script src="index.js"></script>
-  </body>
+</body>
 </html>
